--- a/contents/guides/the-beginners-guide-to-software-engineering.mdx
+++ b/contents/guides/the-beginners-guide-to-software-engineering.mdx
@@ -6,197 +6,231 @@ description: A one-page guide to understand what software engineering is, why it
 Software Engineering is more than just writing code, it is about solving real-world problems with well structured, scalable, and maintainable solutions. Whether you are transitioning into tech, a curious beginner, or exploring the broader world behind the apps you use every day, this guide breaks down the essential concepts in software engineering.
 
 ## What is Software Engineering?
+
 Software Engineering is the process of planning, building, testing, and maintaining software in a structured way. It is not just about writing code but about solving real problems with good systems and teamwork.
 
 ## Programming versus Software Engineering
+
 Programming is writing code to make something work. Software Engineering is designing, building, testing, and maintaining full systems, with teamwork, planning, and best practices. Engineering software means doing more than just coding. Today, many developers call themselves engineers but building good software takes more than just knowing how to code.
 
 ## Why Software Engineering? – The Software Crisis
+
 In the past, many software projects failed because they were late, didn’t meet user requirements, were buggy, hard to maintain, or too expensive. This became known as the Software Crisis. To fix this, engineering methods were introduced to plan and build software more systematically, similar to construction or electronics. This approach is called the SDLC (Software Development Life Cycle).
 
 ## The Software Development Life Cycle (SDLC)
-SDLC is the step by step process or phases teams follow to build software the right way, that is systematically and efficiently. Each step/phase helps reduce mistakes and improve quality.
 
-1. **Planning** – What are we building? Why?
-2. **Requirements** – What should it do? What do users need?
-3. **Design** – How will it look and work?
-4. **Development** – Code it.
-5. **Testing** – Does it work as expected?
-6. **Maintenance** – Fix bugs, update, and improve over time.
+SDLC is the step by step process or phases teams follow to build software the right way, that is systematic and efficient. Each step/phase helps reduce mistakes and improve quality.
 
-**Deep dive into the key phases of SDLC**
-### Requirements Gathering and Analysis - 
+**Planning** – What are we building and why? Define goals, scope, and constraints.
+
+1. **Requirements** – What should it do? Gather and analyze user and system needs.
+2. **Design** – How will it work? Create system architecture, User Interface designs, and workflows. This phase translates planning and requirements into a technical blueprint for development.
+3. **Development** – Build it. Write the actual code based on the design.
+4. **Testing** – Does it work as expected? Find and fix bugs.
+5. **Deployment** – Launch it. Release the software to users.
+6. **Maintenance** – Keep it running. Fix issues, enhance features, and adapt.
+
+---
+
+### Deep dive into the key phases of SDLC
+
+### ✍️ 1. Requirements Gathering and Analysis
+
 The goal at this phase is to understand what the client wants.
-1. **Requirements Gathering**: This is the first step where information about what the software needs to do is collected. There are different methods to gather these requirements, such as:
-- Surveys and Questionnaires: Asking users for their needs and preferences.
-- Interviews: Direct conversations with users, stakeholders, and experts.
-- Focus Groups: Discussions with groups of users or stakeholders to understand common needs.
-- Observations: Watching how users interact with current systems or processes.
-- Use Case Analysis: Identifying the specific tasks and goals of the system from the user's perspective.
 
-2. **Requirements Analysis**: Once the requirements are gathered, they are analyzed to ensure clarity, feasibility, and alignment with business goals. This step helps us:
-- Define the scope: What will the software do, and what won’t it do?
-- Prioritize features: Which features are most important to the users and business?
-- Ensure feasibility: Can the project be completed on time and within budget? Are the technical requirements achievable?
+✅ **Requirements Gathering**: This is the first step where information about what the software needs to do is collected. There are different methods to gather these requirements, such as:
 
-This phase ensures that the development team fully understands what the system needs to accomplish before moving on to design and development. After this phase, two documents should be produced: 
+- **Surveys and Questionnaires:** Asking users for their needs and preferences.
+- **Interviews:** Direct conversations with users, stakeholders, and experts.
+- **Focus Groups:** Discussions with groups of users or stakeholders to understand common needs.
+- **Observations:** Watching how users interact with current systems or processes.
+- **Use Case Analysis:** Identifying the specific tasks and goals of the system from the user's perspective.
 
-- Functional Requirements document: This details the functionality of the system. It specifies what the software should do to fulfill user needs. These are mostly documented as Use Case Analysis and in recent times after the introduction of Agile methodologies, User Stories are created.   
-Example: The system should allow users to log in, search for products, or generate reports.
+✅ **Requirements Analysis**: Once the requirements are gathered, they are analyzed to ensure clarity, feasibility, and alignment with business goals. This step helps us:
 
-- Non Functional Requirements document: This describes the characteristics or properties of the system like system performance, security, usability, scalability, and other quality attributes.   
-Example: The system should be able to handle 1,000 users at the same time, or the response time for a search should be under 2 seconds.
+- **Define the scope:** What will the software do, and what won’t it do?
+- **Prioritize features:** Which features are most important to the users and business?
+- **Ensure feasibility:** Can the project be completed on time and within budget? Are the technical requirements achievable?
 
-#### Use Case Analysis & User Stories
-Use case analysis and user stories are both methods for capturing and expressing requirements in software engineering, but they serve different purposes and are applied at different stages. Use case analysis is a formal, detailed technique typically used in the early phases of a project to define the system's interactions with users. In contrast, user stories are more flexible and informal, commonly used in Agile methodologies to express user needs and guide iterative development.
+This phase ensures that the development team fully understands what the system needs to accomplish before moving on to design and development. After this phase, two documents should be produced:
 
-- Use Case Analysis helps us understand how users interact with a system. It describes who uses the system, what they want to do, and how they do it. It helps define the system’s behavior from the user's point of view. Example:   
-✔ **Actor:** User   
-✔ **Goal:** Log in  
-✔ **Flow:** The user enters their username and password, clicks "Log in," and gains access to their account.   
+- 📌 **Functional Requirements document:** This details the functionality of the system. It specifies what the software should do to fulfill user needs. These are mostly documented as Use Case Analysis and in recent times after the introduction of Agile methodologies, User Stories are created.
 
-- User Stories are short, simple descriptions of a feature from the user's perspective. Example:    
-✔ **Format:** As a [type of user], I want to [do something] so I can [achieve a goal].  
-As a user, I want to log in so I can access my account.   
-✔ **Acceptance Criteria:** 
-These are the conditions that must be true for the story to be considered complete.  
-  * User sees a login form with email and password fields.
-  * User can submit the form to log in.
-  * If login details are correct, user is redirected to their dashboard.
-  * If details are wrong, user sees an error message.
-  * User sees a "Forgot Password?" link below the form.
+**Example:** The system should allow users to log in, search for products, or generate reports.
 
-### Planning - 
-In the planning phase, the goal is to organize and prepare the project for development. This is where the system’s structure is defined, and key design decisions are made to ensure the project will be maintainable, scalable, and efficient.
+- 📌 **Non-Functional Requirements document:** This describes the characteristics or properties of the system like system performance, security, usability, scalability, and other quality attributes.
 
-**Key Concepts in the Planning Phase:**   
-✔ Modularization   
-The system is broken into smaller, manageable units (modules). This makes it easier to develop, test, and maintain. Each module focuses on a specific task or feature, and can be worked on independently.   
-Example: A shopping cart module, a user authentication module, and a payment gateway module.
+**Example:** The system should be able to handle 1,000 users at the same time, or the response time for a search should be under 2 seconds.
 
-✔ High Cohesion   
-Cohesion refers to how closely related the responsibilities of a module are. High cohesion means that the module's components are strongly related to the task it is supposed to perform. It simplifies understanding, maintenance, and testing.   
-Example: A “User” module that handles everything related to user management (login, profile, password reset) should only include functions directly related to users, not unrelated tasks like payment processing.   
+Once the functional requirements have been identified during the requirements gathering and analysis phase, the next step is to document them clearly so that developers and stakeholders share a common understanding of what the system should do.
 
-✔ Low Coupling   
-Coupling refers to how dependent one module is on another. Low coupling means the modules should be as independent as possible, reducing the risk of changes in one module affecting others. This makes the system more flexible and easier to update.    
-Example: If the “User” module is loosely coupled to the “Payment” module, changes in user management (like adding a new feature) won’t break the payment system.
+There are two popular approaches to documenting functional requirements and both of them serve the same purpose, which is to describe how users interact with the system. However, they differ in structure, level of detail, and development philosophy.
 
-✔ Mockups and Prototypes   
-During the planning phase, mockups (visual designs) and prototypes (interactive models) are often created to give stakeholders a preview of how the final system will look and work. This helps validate the system design and gather feedback early on.    
-Example: A wireframe of the user interface (UI) showing where buttons, forms, and other elements will appear on a webpage.
+📌 **Use Case Analysis** helps us understand how users interact with a system. It describes who uses the system, what they want to do, and how they do it. It helps define the system’s behavior from the user's point of view. Example:
 
-This phase sets the foundation for development by defining the system’s architecture, planning how components will interact, and gathering feedback on designs. When high cohesion and low coupling is achieved, it strengthens separation of concerns which increases code readability and maintainability.
+- **Actor:** User
+- **Goal:** Log in
+- **Flow:** The user enters their username and password, clicks "Log in", and gains access to their account.
 
-### Development -  
+📌 **User Stories** are short, simple descriptions of a feature from the user's perspective. Example:
+
+- **Format:** As a [type of user], I want to [do something] so I can [achieve a goal].
+  - `As a user, I want to log in so I can access my account.`
+- **Acceptance Criteria:** These are the conditions that must be true for the story to be considered complete.
+  - User sees a login form with email and password fields.
+  - User can submit the form to log in.
+  - If login details are correct, user is redirected to their dashboard.
+  - If details are wrong, user sees an error message.
+  - User sees a "Forgot Password?" link below the form.
+
+### ✍️ 2. Design
+
+In the design phase, the goal is to translate requirements into a structured blueprint for building the system. This is where the system’s architecture, component structure, and user interface are formally defined. Thoughtful design ensures the solution is scalable, maintainable, and aligned with user needs.
+
+**Key Concepts in the Design Phase:**
+
+✅ **Modularization**
+The system is divided into smaller, manageable units called modules. Each module addresses a specific concern or feature, which simplifies development, testing, and maintenance.
+
+**Example:** A shopping cart module, a user authentication module, and a payment gateway module.
+
+✅ **High Cohesion**
+Cohesion refers to how closely related the responsibilities of a module are. Each module should be focused on a single, well-defined responsibility. High cohesion means all parts of a module work together to achieve that specific purpose, making the code easier to understand and modify.
+
+**Example:** A `User` module should handle everything related to user management like login, profile, and password reset. It should not handle unrelated concerns like payment processing.
+
+✅ **Low Coupling**
+Coupling refers to how dependent one module is on another. Modules should operate independently as much as possible. Low coupling minimizes dependencies between components, allowing changes in one part of the system without breaking others.
+
+**Example:** If the `User` module is loosely coupled to the `Payment` module, changes in user management (like adding a new feature) won’t break the payment system.
+
+✅ **Mockups and Prototypes**
+User Interface/User Experience (UI/UX) designs are created to visualize how the system will look and behave. These can be static mockups or interactive prototypes that help gather early feedback from stakeholders.
+
+**Example:** A wireframe showing the layout of a sign-up form or product page.
+
+### ✍️ 3. Development
+
 The development phase is where actual coding happens. The focus is on writing efficient, maintainable, and scalable code while following best practices and ensuring the system meets the requirements defined in the planning phase. Here is a breakdown of key practices and tools that help developers during this phase:
 
-✔ Design Patterns   
+✅ **Design Patterns**  
 Design patterns are proven solutions to common software design problems. They provide templates for solving specific design challenges in a way that ensures flexibility and maintainability.
-Examples:   
-  - Singleton: Ensures a class has only one instance and provides a global point of access.
-  - Observer: Allows one object to notify others when its state changes, typically used for event-driven programming.
-  - Factory: Creates objects without specifying the exact class of object to be created.
 
-✔ Development Principles  
-Good software is not just about features, it is about writing clean, simple, and maintainable code. These principles help developers build better systems, reduce bugs, speed up development, and make teamwork easier:  
+**Examples:**
+- Singleton: Ensures a class has only one instance and provides a global point of access.
+- Observer: Allows one object to notify others when its state changes, typically used for event-driven programming.
+- Factory: Creates objects without specifying the exact class of object to be created.
 
-  - SOLID Principles: These are five key rules for writing flexible, testable code in object-oriented programming
-  - DRY (Don't Repeat Yourself): Avoid code duplication to reduce errors and make future changes easier. Reuse logic where possible
-  - KISS (Keep It Simple, Stupid): Keep your code simple and easy to understand to avoid unnecessary complexity.
-  - YAGNI (You Aren’t Gonna Need It): Don’t implement features until they are actually needed.
+✅ **Development Principles**  
+Good software is not just about features, it is about writing clean, simple, and maintainable code. These principles help developers build better systems, reduce bugs, speed up development, and make teamwork easier:
 
-✔ Clean Code   
-Writing clean code means writing code that is simple, easy to read, and easy to maintain. This includes using meaningful variable names, organizing code logically, and removing unnecessary comments.
-Key points for clean code:  
+- **SOLID Principles:** These are five key rules for writing flexible, testable code in object-oriented programming
+- **DRY (Don't Repeat Yourself):** Avoid code duplication to reduce errors and make future changes easier. Reuse logic where possible
+- **KISS (Keep It Simple, Stupid):** Keep your code simple and easy to understand to avoid unnecessary complexity.
+- **YAGNI (You Aren’t Gonna Need It):** Don’t implement features until they are actually needed.
 
-  - Naming Conventions: Use meaningful names that reflect the purpose of variables, functions, and classes.
-  - Code Formatting: Proper indentation and consistent styling make the code easier to read.
-  - Refactoring: Regularly revisit and improve code to make it more efficient and easier to understand.   
+✅ **Clean Code**
+Writing clean code means writing code that is simple, easy to read, and easy to maintain. This includes using meaningful variable names, organizing code logically, and removing unnecessary comments. Some key points for clean code are:
 
-✔ Version Control   
-Version control systems (like Git) allow developers to track and manage code changes. It enables collaboration by allowing multiple developers to work on different parts of the codebase without overwriting each other's work.  
-Tools:   
-  - Git: The most commonly used version control system.
-  - GitHub / GitLab / Bitbucket: Platforms that host Git repositories and provide additional features like issue tracking and CI/CD integration.   
+- **Naming Conventions:** Use meaningful names that reflect the purpose of variables, functions, and classes.
+- **Code Formatting:** Proper indentation and consistent styling make the code easier to read.
+- **Refactoring:** Regularly revisit and improve code to make it more efficient and easier to understand.
 
-✔ Unit Testing   
-Unit testing involves testing individual units or components of the software to ensure they work as expected. Unit tests are automated, making them an essential part of continuous integration and code quality assurance.   
-Example: If you are writing a function that calculates the total price in a shopping cart, a unit test would verify that the function works correctly for various inputs (e.g., different prices, discounts, and quantities).     
+✅ **Version Control**
+Version control systems (like Git) allow developers to track and manage code changes. It enables collaboration by allowing multiple developers to work on different parts of the codebase without overwriting each other's work.
 
-✔ Continuous Integration/Continuous Deployment (CI/CD)    
-CI/CD pipelines automate the process of integrating new code changes and deploying them to production. This ensures that the system is always in a deployable state and reduces the time it takes to deliver updates.   
-Tools: Jenkins, Travis CI, CircleCI, GitHub Actions
+- **Git:** The most commonly used distributed version control system.
+- **Mercurial:** Another distributed version control system.
+- **GitHub/GitLab/Bitbucket:** Platforms that host Git repositories and provide additional features like issue tracking and CI/CD integration.
 
-These practices ensure that the development phase results in software that is reliable, maintainable, and easy to expand. It also ensures collaboration is efficient, and that the system remains functional and bug-free as it evolves. 
+✅ **Unit Testing**
+Unit testing involves testing individual units or components of the software to ensure they work as expected. Unit tests are automated, making them an essential part of continuous integration and code quality assurance.
 
-### Testing - 
-Testing ensures the software works as expected, is bug-free, and meets user needs. It helps catch issues early, improves quality, and builds trust in the product.   
+**Example:** If you are writing a function that calculates the total price in a shopping cart, a unit test would verify that the function works correctly for various inputs (e.g., different prices, discounts, and quantities).
 
-**Key Concepts in Testing:**   
-✔ TDD (Test-Driven Development): Write tests before writing the actual code. TDD helps you stay focused, write clean code, and catch bugs early.   
-Flow: Write a failing test → Write just enough code to pass the test → Refactor.
+✅ **Continuous Integration/Continuous Deployment (CI/CD)**
+CI/CD pipelines automate the process of integrating new code changes and deploying them to production. This ensures that the system is always in a deployable state and reduces the time it takes to deliver updates.
 
-✔ Code Coverage  
+**Tools:** `Jenkins`, `Travis CI`, `CircleCI`, `GitHub Actions`
+
+### ✍️ 4. Testing
+
+Testing ensures the software works as expected, is bug-free, and meets user needs. It helps catch issues early, improves quality, and builds trust in the product.
+
+**Key Concepts in Testing:**
+
+✅ **TDD (Test-Driven Development):** Write tests before writing the actual code. TDD helps you stay focused, write clean code, and catch bugs early.
+- Flow: `Write a failing test -> Write just enough code to pass the test -> Refactor`
+
+✅ **Code Coverage**
 Coverage shows how much of your code is tested. High coverage means more parts of your code are verified. It doesn't guarantee bug-free code, but it is a good quality check.
 
-✔ Types of Testing   
-  - Unit Testing: Tests small parts (functions, classes) in isolation.
-  - Integration Testing: Tests how components work together.
-  - System Testing: Tests the entire system as a whole.
-  - Acceptance Testing: Verifies the system meets user requirements.
-  - Regression Testing: Ensures new changes don’t break old features.
+✅ **Types of Testing**
 
-✔ Why Testing Matters    
-  - Find bugs early and reduce cost of fixing them.
-  - Improves confidence in code changes.
-  - Helps teams ship faster with fewer issues.
+- **Unit Testing:** Tests small parts (functions, classes) in isolation.
+- **Integration Testing:** Tests how components work together.
+- **System Testing:** Tests the entire system as a whole.
+- **Acceptance Testing:** Verifies the system meets user requirements.
+- **Regression Testing:** Ensures new changes don’t break old features.
+
+✅ **Why Testing Matters**
+
+- Find bugs early and reduce cost of fixing them.
+- Improves confidence in code changes.
+- Helps teams ship faster with fewer issues.
+
+---
 
 ## Tools & Tech Stack
+
 Software Engineers use different tools and technologies depending on what they are building. The right stack depends on the project’s needs and team preferences. Here is a quick overview:
 
-- Frontend (User Interface) – Tools for building what users see and interact with  
-Examples: HTML, CSS, JavaScript, React, Vue
+- ✅ **Frontend (User Interface)** – Tools for building what users see and interact with
+  Examples: HTML, CSS, JavaScript, React, Vue
 
-- Backend (Logic & Data) - Handles the logic, databases, and APIs behind the scenes   
-Examples: Node.js, Express, Python, Django, Java, Spring
+- ✅ **Backend (Logic & Data)** - Handles the logic, databases, and APIs behind the scenes
+  Examples: Node.js, Express, Python, Django, Java, Spring
 
-- Databases – Store and organize data so the app can read and write information   
-Examples: MongoDB, PostgreSQL, MySQL
+- ✅ **Databases** – Store and organize data so the app can read and write information
+  Examples: MongoDB, PostgreSQL, MySQL
 
-- Version Control – Keeps track of code changes, so you can go back in time or work in teams without overwriting each other’s work   
-Examples: Git, GitHub, GitLab
+- ✅ **Version Control** – Keeps track of code changes, so you can go back in time or work in teams without overwriting each other’s work
+  Examples: Git, GitHub, GitLab
 
-- DevOps & Deployment – Tools for running apps live, automating updates, and managing servers   
-Examples: Docker, GitHub Actions, Netlify, Vercel, AWS
+- ✅ **DevOps & Deployment** – Tools for running apps live, automating updates, and managing servers
+  Examples: Docker, GitHub Actions, Netlify, Vercel, AWS
 
-- Collaboration – Helps teams plan, communicate, and stay organized   
-Examples: Jira, Trello, Slack, Notion
+- ✅ **Collaboration** – Helps teams plan, communicate, and stay organized.
+  Examples: Jira, Trello, Slack, Notion
 
 ## Career Paths in Software Engineering
+
 There are many roles in software engineering. Each one focuses on a different part of building or maintaining software. You can start in one area and grow into others as you gain more experience:
 
-- Frontend Developer – Builds the user interface of websites and apps.
-- Backend Developer – Works on the server, database, and logic behind the app.
-- Full-Stack Developer – Handles both frontend and backend tasks.
-- DevOps Engineer – Automates testing, deployment, and server setup.
-- QA Engineer – Tests the app to find and fix bugs before users do.
-- Mobile Developer – Builds apps for phones and tablets (Android or iOS).
-- Data Engineer / AI Engineer – Works with data systems, ML models, or AI-powered apps.
-- Software Architect – Plans the structure and design of complex systems.
-- Engineering Manager – Leads a team of developers and makes technical decisions.
+- ✅ **Frontend Developer** – Builds the user interface of websites and apps.
+- ✅ **Backend Developer** – Works on the server, database, and logic behind the app.
+- ✅ **Full-Stack Developer** – Handles both frontend and backend tasks.
+- ✅ **DevOps Engineer** – Automates testing, deployment, and server setup.
+- ✅ **QA Engineer** – Tests the app to find and fix bugs before users do.
+- ✅ **Mobile Developer** – Builds apps for phones and tablets (Android or iOS).
+- ✅ **Data Engineer/AI Engineer** – Works with data systems, ML models, or AI-powered apps.
+- ✅ **Software Architect** – Plans the structure and design of complex systems.
+- ✅ **Engineering Manager** – Leads a team of developers and makes technical decisions.
 
 ## How to Grow as a Software Engineer
+
 Growing as a software engineer takes time, practice, and curiosity. It is a journey, focus on learning every day. Here’s how to keep improving:
 
-- Keep Learning – Tech changes fast. Read docs, take courses, and follow new trends.
-- Build Projects – Practice by solving real problems. Start small and grow.
-- Read Code – Learn from others by reading open-source projects.
-- Ask Questions – Don’t be afraid to ask for help. It is how you grow faster.
-- Write Clean Code – Focus on simplicity, structure, and readability.
-- Work with Others – Join teams, contribute to open source, or find a mentor.
-- Stay Curious – Try new tools, explore new fields, and challenge yourself.
+- **Keep Learning** – Tech changes fast. Read docs, take courses, and follow new trends.
+- **Build Projects** – Practice by solving real problems. Start small and grow.
+- **Read Code** – Learn from others by reading open-source projects.
+- **Ask Questions** – Don’t be afraid to ask for help. It is how you grow faster.
+- **Write Clean Code** – Focus on simplicity, structure, and readability.
+- **Work with Others** – Join teams, contribute to open source, or find a mentor.
+- **Stay Curious** – Try new tools, explore new fields, and challenge yourself.
 
 ## Final Thoughts
-> **Software Engineering is a journey from writing code to solving real-world problems.**  
-> It's not just about syntax, it’s about thinking like a problem solver, designing systems that are clear, scalable, and dependable. Shifting from 'just coding' to 'engineering solutions' takes practice, curiosity, and purpose. Remember, every great engineer once started as a curious beginner.
+
+> **Software Engineering is a journey from writing code to solving real-world problems.**
+
+It's not just about syntax, it’s about thinking like a problem solver, designing systems that are clear, scalable, and dependable. Shifting from "just coding" to "engineering solutions" takes practice, curiosity, and purpose. Remember, every great engineer once started as a curious beginner.
